--- a/package.json
+++ b/package.json
@@ -4,19 +4,22 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-   "start": "node server/index.js",
-   "dev": "nodemon server/index.js"
+    "start": "node server/index.js",
+    "dev": "nodemon server/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@apollo/client": "^3.9.0",
     "colors": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
     "graphql": "^15.8.0",
-    "mongoose": "^8.1.1"
+    "mongoose": "^8.1.1",
+    "react-icons": "^5.0.1",
+    "react-router-dom": "^6.21.3"
   },
   "devDependencies": {
     "dotenv": "^16.4.1",
